--- a/style.css
+++ b/style.css
@@ -1,19 +1,11 @@
-div {
-  margin: 40px;
-}
-
 .rotate {
-  width: 90px;
-  height: 90px;
-  background-color: #DFF0D8;
-  animation: spin 2s infinite;
+  animation: rotation 2s infinite linear;
 }
-
-@keyframes spin {
+@keyframes rotation {
   from {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(359deg);
   }
 }
