--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@
     transform: rotate(359deg);
   }
 }
+.linear {
+  animation-timing-function: linear;
+}
+.infinite {
+  animation-iteration-count: infinite;
+}
+.rotate-image {
+  animation: rotation 2s linear infinite;
+}
